--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,7 +1,6 @@
 .layout {
   width: 100%;
   height: 100vh;
-  position: absolute;
 }
 
 h2 {
@@ -9,20 +8,21 @@ h2 {
   padding: 20px 0;
   text-align: center;
   font-size: 35px;
-  color: black;
+  color: rgb(13, 110, 253);
 }
 
 .layoutChat {
-  border: 1px solid black;
+  border: 1px solid rgb(197, 197, 197);
   border-radius: 5px;
   margin: 0 auto;
-  min-height: 600px;
+  height: 580px;
   max-width: 1000px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
 
 .inputGroup {
   max-width: 1000px;
-  position: absolute !important;
-  bottom: 0;
+  margin: 0 auto;
 }
